# ValoChecker

./: index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: main.js  style.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  auth.rs  lib.rs  main.rs  store.rs
