[package]
name = "valorant-store-viewer"
version = "0.1.0"
description = "Valorant Store Viewer"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls", "json"] }
keyring = "3.0"
reqwest_cookie_store = "0.8.0"
cookie_store = { version = "0.21.0", features = ["preserve_order"] }
aes-gcm = "0.10.3"
rand = "0.8.5"
base64 = "0.22.1"
